--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,21 +7,19 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <ImageView
-        android:id="@+id/image_main_screen"
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/containerForFragments"
+        android:name="androidx.navigation.fragment.NavHostFragment"
+        app:defaultNavHost="true"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:srcCompat="@drawable/man_main"
-        app:layout_constraintTop_toTopOf="parent"
-        android:adjustViewBounds="true"/>
-
-    <Button
-        android:id="@+id/button_main_screen"
-        android:text="@string/start"
-        android:layout_width="200dp"
-        android:layout_height="60dp"
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_height="match_parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/image_main_screen"
-        android:layout_margin="24dp"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:navGraph="@navigation/nav_graph">
+
+    </androidx.fragment.app.FragmentContainerView>
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
